--- a/ios/dsavisualizer.xcodeproj/xcshareddata/xcschemes/dsavisualizer.xcscheme
+++ b/ios/dsavisualizer.xcodeproj/xcshareddata/xcschemes/dsavisualizer.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "notioner.app"
-               BlueprintName = "notioner"
-               ReferencedContainer = "container:notioner.xcodeproj">
+               BuildableName = "dsavisualizer.app"
+               BlueprintName = "dsavisualizer"
+               ReferencedContainer = "container:dsavisualizer.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "notionerTests.xctest"
-               BlueprintName = "notionerTests"
-               ReferencedContainer = "container:notioner.xcodeproj">
+               BuildableName = "dsavisualizerTests.xctest"
+               BlueprintName = "dsavisualizerTests"
+               ReferencedContainer = "container:dsavisualizer.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "notioner.app"
-            BlueprintName = "notioner"
-            ReferencedContainer = "container:notioner.xcodeproj">
+            BuildableName = "dsavisualizer.app"
+            BlueprintName = "dsavisualizer"
+            ReferencedContainer = "container:dsavisualizer.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "notioner.app"
-            BlueprintName = "notioner"
-            ReferencedContainer = "container:notioner.xcodeproj">
+            BuildableName = "dsavisualizer.app"
+            BlueprintName = "dsavisualizer"
+            ReferencedContainer = "container:dsavisualizer.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
