--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notioner",
+  "name": "dsavisualizer",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -19,16 +19,16 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
-    "@types/react-native": "^0.69.6",
+    "@types/react-native": "^0.70.0",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.72.1",
     "react-test-renderer": "18.1.0",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.3"
   },
   "jest": {
     "preset": "react-native",
@@ -40,22 +40,5 @@
       "json",
       "node"
     ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/roman-ojha/notion-assistant.git"
-  },
-  "keywords": [
-    "express",
-    "react-native",
-    "assistant",
-    "notion",
-    "notion-api"
-  ],
-  "author": "roman-ojha",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/roman-ojha/notion-assistant/issues"
-  },
-  "homepage": "https://github.com/roman-ojha/notion-assistant#readme"
+  }
 }
