--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "18.1.0",
     "react-native": "0.70.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
