--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.1",
     "react": "18.1.0",
     "react-native": "0.70.0",
+    "react-native-gesture-handler": "^2.6.2",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-safe-area-context": "^4.3.4",
+    "react-native-screens": "^3.17.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.2.0"
   },
