--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.70.0",
     "react-native-gesture-handler": "^2.6.2",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-orientation-locker": "^1.5.0",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
     "react-native-splash-screen": "^3.3.0",
