--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
