--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "4",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.1",
     "react": "18.1.0",
@@ -17,6 +18,7 @@
     "react-native-gesture-handler": "^2.6.2",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-orientation-locker": "^1.5.0",
+    "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
     "react-native-splash-screen": "^3.3.0",
