--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "4",
+    "@react-native-picker/picker": "^2.4.6",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.1",
     "react": "18.1.0",
@@ -18,6 +19,7 @@
     "react-native-gesture-handler": "^2.6.2",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-orientation-locker": "^1.5.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
