--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
+    "@react-native-community/checkbox": "^0.5.12",
     "@react-native-picker/picker": "^2.4.6",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.1",
